--- a/index.html
+++ b/index.html
@@ -6,23 +6,20 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.6.0.js"></script>
     <script src="js/scripts.js"></script>
-    <title>Mayan Mr.Robogers</title>
+    <title>Mayan Mr Robogers </title>
 </head>
 
 <body>
     <div class="container">
-        <h1>Welcome to Mayan Mr.Robogers Number Generator</h1>
+        <h1>Welcome to Mr Roboger's Neighborhood</h1>
 
-        <form id="number-form ">
-            <div class="form-group ">
-                <label for="userInput ">Please enter a number:</label>
-                <input id="userInput " class="form-control " type="number ">
-            </div>
-
-            <button type="submit " class="mainButton ">Find Out Mr. Mayan Roboger's favorite mayan word based on your number choice!'</button>
+        <form id="number-form">
+            <label for="userInput">Please enter a number:</label>
+            <input id="userInput" class="form-control" value="number"></input>
+            <button type="submit" id="numberButton">See what Mr. Roboger has to say</button>
         </form>
 
-        <span id="result "></span>
+        <span id="result"></span>
     </div>
 </body>
 
