css property added for results id, body  and button

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <button type="submit" id="numberButton">See what Mr. Roboger has to say</button>
         </form>
 
-        <span id="result"></span>
+        <span id="results"></span>
     </div>
 </body>
 
