add img and heading css

--- a/index.html
+++ b/index.html
@@ -11,15 +11,22 @@
 
 <body>
     <div class="container">
-        <h1>Welcome to Mr Roboger's Neighborhood</h1>
+        <div class="heading">
+            <h1>Vintage Mr Roboger's Neighborhood</h1>
+            <style>
+                @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@200&display=swap');
+            </style>
+        </div>
+
 
         <form id="number-form">
             <label for="userInput">Please enter a number:</label>
-            <input id="userInput" class="form-control" value="number"></input>
-            <button type="submit" id="numberButton">See what Mr. Roboger has to say</button>
+            <input id="userInput" class="form-control"></input>
+            <button type="submit" id="btn">Find out what the robot says:</button>
         </form>
 
         <span id="results"></span>
+        <img id="javaScript" src="roboger.jpg" alt="robot Mr.Rogers!">
     </div>
 </body>
 
