includes method added to for loop.It will calculate boolean value of index to string

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.6.0.js"></script>
     <script src="js/scripts.js"></script>
-    <title>Mayan Mr Robogers </title>
+    <title>Vintage Mr Robogers </title>
 </head>
 
 <body>
@@ -17,16 +17,13 @@
                 @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@200&display=swap');
             </style>
         </div>
-
-
         <form id="number-form">
             <label for="userInput">Please enter a number:</label>
             <input id="userInput" class="form-control"></input>
             <button type="submit" id="btn">Find out what the robot says:</button>
         </form>
-
         <span id="results"></span>
-        <img id="javaScript" src="roboger.jpg" alt="robot Mr.Rogers!">
+        <img id="robogers" src="roboger.jpg" alt="Robot Mr.Rogers!">
     </div>
 </body>
 
